added to existing notebook to create html table and save in data folder

--- a/MinWage.ipynb
+++ b/MinWage.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import os\n",
     "import csv\n",
     "from sqlalchemy import create_engine \n",
-    "from config import username, password, database "
+    "#from config import username, password, database "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +202,7 @@
        "4                                              12.26        (b)  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -412,7 +412,7 @@
        "[2862 rows x 7 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,10 +753,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cleaned_df_html = cleaned_df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned_df.to_html('data/minwage_table.html')"
+   ]
   }
  ],
  "metadata": {
